# langchain-stack-boilerplate

./: .coverage  .dockerignore  .env.example  .env.langfuse.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  agent.py  api.py  docker-compose.langfuse.yml  docker-compose.yml  main.py  pyproject.toml  todo-list.md  tracing.py
.github/workflows/: ci.yml
docs/: justificativa-api-anthropic.md
docs/constitution/: mission.md  roadmap.md  tech-stack.md
docs/specs/: langfuse-integration.md  tests-and-ci.md
tests/: conftest.py  test_agent.py  test_api.py  test_tracing.py
