[project]
name = "langchain-stack-boilerplate"
version = "0.1.0"
description = "Python 3.12 boilerplate for LangChain / LangGraph / deepagents applications, with a FastAPI wrapper and Docker support."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "França Mac Dowell" }]
dependencies = [
    "deepagents>=0.5.7",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-openrouter>=0.2.3",
    "langfuse>=3.0,<4",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-cli[inmem]>=0.4.25",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["tracing", "agent", "api"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"agent.py" = ["E402"]    # load_dotenv() before imports is intentional
"main.py" = ["E501"]     # long string literals in the demo prompt
